--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,6 +81,8 @@
     "    if largest != parent_position:\n",
     "        l[parent_position], l[largest] = l[largest], l[parent_position]\n",
     "        heapify(l, size, largest)\n",
+    "    \n",
+    "    return parent_position\n",
     "        \n",
     "def heap_sort(l):\n",
     "    size = len(l)\n",
@@ -89,22 +91,66 @@
     "        \n",
     "    for i in range(size - 1, 0, -1):\n",
     "        l[i], l[0] = l[0], l[i]\n",
-    "        heapify(l, i, 0)"
+    "        heapify(l, i, 0)\n",
+    "        \n",
+    "def build_and_print_heap(l):\n",
+    "    size = len(l)\n",
+    "    place = 0\n",
+    "    v = []\n",
+    "    for k in range(size , -1, -1):\n",
+    "        heapify(l, size, k)\n",
+    "        \n",
+    "    for i in range(size):\n",
+    "        if i == 0:\n",
+    "           v.append((l[i], None))\n",
+    "        elif i % 2 != 0:\n",
+    "            v.append((l[i], l[(i//2)]))\n",
+    "        else:\n",
+    "            v.append((l[i], l[(i//2) - 1]))\n",
+    "        \n",
+    "    print(v)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Radix LSD**"
+    "#### To understand a little bit more about heap structures we can see that our list is l[i] = (Value in that position, Parent value) and we have a simple visualization of a heap"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(5, None), (4, 5), (2, 5), (3, 4), (1, 4)]\n",
+      "\n",
+      "\n",
+      "HEAP REPRESENTATION\n",
+      "\n",
+      "     5       \n",
+      "\n",
+      "    /  \\    \n",
+      "\n",
+      "   4    2    \n",
+      "\n",
+      " /  \\    \n",
+      "\n",
+      "3     1    \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "heap = [3, 1, 2, 4, 5]\n",
+    "build_and_print_heap(heap)\n",
+    "\n",
+    "print('\\n\\nHEAP REPRESENTATION\\n\\n     {}       \\n\\n    /  \\    \\n\\n   {}    {}    \\n\\n /  \\    \\n\\n{}     {}    \\n'.format(heap[0], heap[1], heap[2], heap[3], heap[4]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 145,
    "metadata": {
     "scrolled": false
    },
@@ -128,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -161,17 +207,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Algorithm Heap Sort has taken 0.2203831672668457 seconds to finish in generation column\n",
-      "Algorithm Heap Sort has taken 0.3949437141418457 seconds to finish in year column\n",
-      "Algorithm Heap Sort has taken 0.34431886672973633 seconds to finish in suicides_no column\n",
-      "Algorithm Heap Sort has taken 0.3507273197174072 seconds to finish in suicides/100k pop column\n"
+      "Algorithm Heap Sort has taken 0.23195099830627441 seconds to finish in generation column\n",
+      "Algorithm Heap Sort has taken 0.43935632705688477 seconds to finish in year column\n",
+      "Algorithm Heap Sort has taken 0.3884708881378174 seconds to finish in suicides_no column\n",
+      "Algorithm Heap Sort has taken 0.38814401626586914 seconds to finish in suicides/100k pop column\n"
      ]
     }
    ],
@@ -188,25 +234,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 78,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# # testing time for radix lsd sort\n",
-    "# l1_2 = np.array(df2['generation'])\n",
-    "# l2_2 = np.array(df2['year'])\n",
-    "# l3_2 = np.array(df2['suicides_no'])\n",
-    "# l4_2 = np.array(df2['suicides/100k pop'])\n",
-    "\n",
-    "# d2 = {'year' : l2_2, 'suicides_no' : l3_2, 'suicides/100k pop' : l4_2}\n",
-    "\n",
-    "# test_algorithms(d2, name='radix')"
+    "## After measuring the time, we can try to understand our different lists and our full data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -219,10 +255,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x27a0feb3b00>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x24f31c90710>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -242,12 +278,12 @@
    "source": [
     "plt = df['generation'].value_counts()\n",
     "print(len(plt))\n",
-    "plt.plot(kind='bar')\n"
+    "plt.plot(kind='bar')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -260,10 +296,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x27a0fb15358>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x24f31c906a0>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -288,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +333,7 @@
        "5298"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +354,7 @@
        "2084"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,11 +365,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**So we reach the conclusion that distribution of data will affect more our heapsort algorithm than the datatype/data itself, because the one that took us more time was the one with only 32 different values, and the one that took us less time was the one with 6, while the ones with 2k or more took us a moderate time**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# # testing time for radix lsd sort\n",
+    "# l1_2 = np.array(df2['generation'])\n",
+    "# l2_2 = np.array(df2['year'])\n",
+    "# l3_2 = np.array(df2['suicides_no'])\n",
+    "# l4_2 = np.array(df2['suicides/100k pop'])\n",
+    "\n",
+    "# d2 = {'year' : l2_2, 'suicides_no' : l3_2, 'suicides/100k pop' : l4_2}\n",
+    "\n",
+    "# test_algorithms(d2, name='radix')"
+   ]
   }
  ],
  "metadata": {
