--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Heap Sort e Radix Sort"
+    "# O(n) sorting algorithms"
    ]
   },
   {
@@ -21,12 +21,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using O(n) sorting algorithms to test the best datatype/distribution for each of them"
+    "# Using O(n) sorting algorithms to understand what affect more each one performances"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## HEAP SORT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +56,7 @@
     "    elif name == 'radix':\n",
     "        for n, items in l.items():\n",
     "            s = time.time()\n",
-    "            radix(items)\n",
+    "            radix_sort(items)\n",
     "            e = time.time()\n",
     "            print_l(items, e - s, n, name)"
    ]
@@ -58,12 +65,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Heap Sort com heapify**"
+    "## Heap Sort using heapify heapify"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +114,6 @@
     "            v.append((l[i], l[(i//2)]))\n",
     "        else:\n",
     "            v.append((l[i], l[(i//2) - 1]))\n",
-    "        \n",
     "    print(v)"
    ]
   },
@@ -115,12 +121,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### To understand a little bit more about heap structures we can see that our list is l[i] = (Value in that position, Parent value) and we have a simple visualization of a heap"
+    "### To understand a little bit more about heap structures we can see that our list is l[i] = (Value in that position, Parent value) and we have a simple visualization of a heap"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### After writing both algorithms, we test each one to measure time"
+    "## After writing both algorithms, we test each one to measure time"
    ]
   },
   {
@@ -168,8 +174,7 @@
    "outputs": [],
    "source": [
     "dataset = pd.read_csv('master.csv')\n",
-    "df = pd.DataFrame(dataset)\n",
-    "df2 = pd.DataFrame(dataset)"
+    "# df = pd.DataFrame(dataset)"
    ]
   },
   {
@@ -372,20 +377,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RADIX LSD"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # testing time for radix lsd sort\n",
-    "# l1_2 = np.array(df2['generation'])\n",
-    "# l2_2 = np.array(df2['year'])\n",
-    "# l3_2 = np.array(df2['suicides_no'])\n",
-    "# l4_2 = np.array(df2['suicides/100k pop'])\n",
+    "def countingSort(l, exp1): \n",
+    "    n = len(l) \n",
+    "    b = [0] * n\n",
+    "    c = [0] * 10 \n",
+    "  \n",
+    "    for i in range(0, n): \n",
+    "        index = l[i] / exp1)\n",
+    "        c[ int(index % 10) ] += 1\n",
     "\n",
-    "# d2 = {'year' : l2_2, 'suicides_no' : l3_2, 'suicides/100k pop' : l4_2}\n",
+    "    for i in range(1, 10): \n",
+    "        c[i] += c[i-1] \n",
+    "    \n",
+    "    i = n-1\n",
+    "    while i >= 0: \n",
+    "        index = l[i] / exp1\n",
+    "        b[c[int(index % 10)] - 1] = l[i] \n",
+    "        c[int(index % 10)] -= 1\n",
+    "        i -= 1\n",
     "\n",
-    "# test_algorithms(d2, name='radix')"
+    "    i = 0\n",
+    "    for i in range(len(l)): \n",
+    "        l[i] = b[i] \n",
+    "        \n",
+    "    return l\n",
+    "\n",
+    "def radix_sort(l): \n",
+    "    m = max(l) \n",
+    "    e = 1\n",
+    "    \n",
+    "    while m/e > 0:\n",
+    "        counting_sort(l,e) \n",
+    "        e *= 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Algorithm Radix Sort has taken 62.602465867996216 seconds to finish in year column\n",
+      "Algorithm Radix Sort has taken 61.5393488407135 seconds to finish in suicides_no column\n"
+     ]
+    }
+   ],
+   "source": [
+    "# testing time for radix lsd sort\n",
+    "df2 = pd.DataFrame(dataset)\n",
+    "\n",
+    "l1_2 = np.array(df2['year'])\n",
+    "l2_2 = np.array(df2['suicides_no'])\n",
+    "\n",
+    "d2 = {'year' : l1_2, 'suicides_no' : l2_2}\n",
+    "\n",
+    "test_algorithms(d2, name='radix')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**So we reach the conclusion that distribution of data will affect more our radix sort than anything else**"
    ]
   }
  ],
